updated footer logo img, resolved spacing issues, added news-offer css and reqiore once in index

--- a/footer.css
+++ b/footer.css
@@ -1,6 +1,6 @@
 
 
-.boxfooter {
+/*/.boxfooter {
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax(200px,1fr));
    gap:30px;
@@ -8,6 +8,22 @@
    padding-bottom: 5rem;
    background-color:var(--red);
    color: var(--yeallow);
+}
+
+/*/
+
+.boxfooter {
+    width: 100%;
+    padding: 2.5rem 3.75rem;
+    padding-bottom: 5rem;
+    background-color: var(--red);
+    color: var(--yeallow);
+}
+
+.moreinfo {
+    display: flex;
+    flex-direction: column;
+    gap: 30px;
 }
 
 .boxfooter .box1,
@@ -36,11 +52,6 @@
 .box a {
   color: #ffd700;
   text-decoration: none;
-}
-
-.box2 img {
-  max-width: 100%;
-  height: auto;
 }
 
 .box4 ul {
@@ -119,7 +130,65 @@
 }
 
 
-@media screen and (min-width: 950px){
+
+@media screen and (min-width: 900px){
+  /*/  .boxfooter {
+        display: grid;                
+        grid-template-columns: repeat(3, minmax(0, 1fr)); /* tre lika stora kolumner */
+        /*/gap: 40px;
+        padding: 40px 20px;  
+    }/*/
+    
+
+    .moreinfo {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        gap: 15rem;
+        justify-content: space-evenly;
+        margin-left: 10%;
+    }
+
+    .boxfooter {
+        padding: 40px 20px;
+    }
+
+    .box2 {
+        margin-top: 2rem;
+    }
+
+    .box2 img {
+        width: 80%;
+    }
+
+    .logo-line {
+        width: 80%;
+    }
+
+    .boxfooter > .box1,
+    .boxfooter > .box3,
+    .boxfooter > .box4 {
+        display: flex;
+        flex-direction: column;
+        justify-content: flex-start;
+        align-items: stretch; /* stretcha innehållet i kolumnen */
+    }
+
+    .boxfooter .box2 {
+        grid-column: 1 / -1; /* fortfarande längst ner */
+        justify-self: center;
+        margin-top: 2rem; 
+    }
+
+    .footer-info {
+        width: 80%;               
+        max-width: 80%;         
+        justify-content: space-between; 
+        padding: 0;          
+    }
+}
+
+
+/*@media screen and (min-width: 950px){
     
 
 
@@ -146,7 +215,7 @@
 }
 
 
-/*/.moving-image {
+/.moving-image {
   position: relative;
   animation: moveRight 10s linear infinite;
   height: 100px;
